add scroll to top when changing routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,7 +89,7 @@
     </button>
   </mat-sidenav>
 
-  <mat-sidenav-content class="sidenav-content">
+  <mat-sidenav-content class="sidenav-content" #content>
     <!-- AICI ESTE LOCUL CORECT PENTRU BANNER -->
     <app-test-mode-banner></app-test-mode-banner>
     <app-header [drawer]="drawer"></app-header>
