add scroll to the top of animal grid container when change page

--- a/src/app/pages/animals/animal-list/animal-list.component.html
+++ b/src/app/pages/animals/animal-list/animal-list.component.html
@@ -8,7 +8,7 @@
 </section>
 
 <!-- Antetul Secțiunii -->
-<header class="page-header">
+<header class="page-header" #animalGrid>
   <h1>Faceți cunoștință cu Rezidenții Noștri</h1>
   <p>
     Fiecare suflet de aici are o poveste unică și așteaptă cu speranță un ajutor
